# polymorph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
docs/: ARCHITECTURE.md  QUICKSTART.md  WASM_DETECTION.md
examples/: basic_scan.rs  batch_scan.rs  json_output.rs
rules/: polymorph.yar
scripts/: build-cross-platform.sh  install.sh  test-samples.sh
src/: main.rs  report.rs  scanner.rs
src/detectors/: ape.rs  evasion.rs  mod.rs  polyglot.rs  wasm.rs  zig.rs
src/utils/: format.rs  hash.rs  mod.rs
tests/: wasm_test.rs
